--- a/app/views/state-detail.html
+++ b/app/views/state-detail.html
@@ -2,13 +2,13 @@
 	<div class="col-sm-12">
 		<div class="row">
 			<div class="list-header">
-				<div class="back-ico"></div>
+				<div class="back-ico" data-ng-click="goTo('statesList')"></div>
 				<h1 class="pull-left detail-title">{{selectedState.name}}</h1>
 				<div class="pref-ico pull-right"></div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="estate-card" data-ng-repeat="estate in estatesList" data-ng-click="munDetail($index)">
+			<div class="estate-card" data-ng-repeat="estate in estatesList" data-ng-click="estateDetail($index)">
 				<img src="{{estate.cover}}" alt="">
 				<div class="estate-specs">
 					<div class="home-ico pull-left"></div>
