--- a/app/views/recents.html
+++ b/app/views/recents.html
@@ -22,8 +22,8 @@
 		<div class="nav-ico user-ico"></div>
 	</div>
 </div>
-<div data-ng-switch on="stateSelected">
+<!--div data-ng-switch on="stateSelected">
 	<div class="animate-switch" data-ng-switch-when="true">
 		<div data-ng-include="'views/state-detail.html'"></div>
 	</div>
-</div>
+</div-->
