--- a/app/views/recents.html
+++ b/app/views/recents.html
@@ -4,7 +4,7 @@
 		<button type="button" class="btn btn-default btn-lg search-btn">
 		<span class="glyphicon glyphicon-search pull-right" aria-hidden="true"></span>
 		</button>
-		<img src="images/titles/recent-title.jpg" alt="">
+		<img src="../images/titles/recent-title.jpg" alt="">
 	</div>
 	
 	<div class="row">
