--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,4 +8,7 @@
   <div class="animate-switch" data-ng-switch-when="estateDetail">
     <div data-ng-include="'views/estate-detail.html'"></div>
   </div>
+  <div class="animate-switch" data-ng-switch-when="preferences">
+    <div data-ng-include="'views/preferences.html'"></div>
+  </div>
 </div>
