--- a/app/views/state-detail.html
+++ b/app/views/state-detail.html
@@ -4,7 +4,7 @@
 			<div class="list-header">
 				<div class="back-ico" data-ng-click="goTo('statesList')"></div>
 				<h1 class="pull-left detail-title">{{selectedState.name}}</h1>
-				<div class="pref-ico pull-right"></div>
+				<div class="pref-ico pull-right" data-ng-click="goTo('preferences')"></div>
 			</div>
 		</div>
 		<div class="row">
