--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -754,6 +754,7 @@ body {
   width: 100%;
   height: 50px;
   color: #40b4e5;
+  margin-bottom: 20px;
 }
 
 .result-btn-wrapper, .type-btn-wrapper{
@@ -776,12 +777,22 @@ body {
   transition:all ease 0.2s;
 }
 
+.type-btn-wrapper{
+  margin-bottom: 20px;
+}
+
 /*.btn-wrapper .btn:active, .btn-wrapper .btn:hover{
   box-shadow: none;
   background: none;
   background:#40b4e5;
   color: white;
 }*/
+
+.rank-img{
+  float: left;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
 .btn-wrapper .btn.active{
   background:none;
@@ -791,5 +802,71 @@ body {
 }
 
 .specs-selector{
-  width: 90%;
+  width: 100%;
+  padding:10px;
+  padding-top:0px;
+  float: left;
+  background: white;
+  border: 1px solid #b2b3b1
+}
+
+.specs-selector .check-ico{
+  background-color: #40b4e5;
+  width: 30px;
+  height: 30px;
+  background-color: #40b4e5;
+  mask-size: 220%;
+  -webkit-mask-size: 220%;
+  mask-position: -18px -17px;
+  -webkit-mask-position: -18px -17px;
+  mask-image: url(/images/icos/Ico_ConSeleccion.svg);
+  -webkit-mask-image: url(/images/icos/Ico_ConSeleccion.svg);
+  float: left;
+}
+
+.spec p{
+  float: left;
+  margin-top:3px;
+  margin-bottom: 0px;
+}
+
+.spec .unchecked{
+  width: 29px;
+    height: 29px;
+    border: 1px solid #40b4e5;
+    border-radius: 20px;
+    float: right;
+    margin-top: 2px;
+}
+
+.spec{
+  border-bottom: 1px solid #ccc;
+  float: left;
+  width: 100%;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.specs-selector .blue-text{
+  width: 100%;
+  float: left;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.save-button{
+  float: left;
+  width: 100%;
+  text-align: center;
+  padding:15px 0;
+  color: white;
+  font-weight: bold;
+  height:60px;
+  background-color: #40b4e5;
+  font-size: 20px;
+  margin-top: 20px
+}
+
+.marginB0{
+  margin-bottom: 0px;
 }
