--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -847,6 +847,9 @@ body {
   margin-top: 10px;
 }
 
+.spec:last-of-type{
+  border-bottom:none;
+}
 .specs-selector .blue-text{
   width: 100%;
   float: left;
@@ -869,4 +872,22 @@ body {
 
 .marginB0{
   margin-bottom: 0px;
+}
+
+.preferences-modal{
+  width: 100%;
+  height: 826px;
+  background: rgba(55,55,55,.8);
+  float: left;
+  padding: 20px;
+  z-index: 9000;
+  position: absolute;
+}
+
+.preferences-modal h2, .preferences-modal h3{
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  margin-bottom:10px;
+  margin-top: 0px
 }
