--- a/app/views/estate-detail.html
+++ b/app/views/estate-detail.html
@@ -4,7 +4,7 @@
 			<div class="list-header">
 				<div class="back-ico" data-ng-click="goTo('estatesList')"></div>
 				<h1 class="pull-left detail-title">Detalle</h1>
-				<div class="pref-ico pull-right"></div>
+				<div class="pref-ico pull-right"  data-ng-click="goTo('preferences')"></div>
 			</div>
 		</div>
 		<div class="row">
